erDiagram

    Cliente{
        int Id_Cliente PK
        varChar Nombre
        varChar Direccion
        varChar Telefono
        correo Mail
    }

    Reserva{
        int Id_Cliente FK
        int Id_Pista FK
        Date FechaHora_Reserva
        int Id_reserva PK
        int Id_Partida FK
        int Id_Pedido FK
        varChar Estado FK
    }

    

    Estado_Reserva{
        varChar Estado PK
        varChar Descripcion
    }

    PedidoxProducto{
        int Id_Pedido FK, PK
        int Id_Producto FK, PK
        int Cantidad
    }

    Jugador{
        int Id_Jugador PK
        int Numero_fila FK, PK
        int Puntos_Realizados
    }

    Partida{
        int Id_Partida PK
        int Id_Pista FK
        int Id_reserva FK
        int Jugadores FK
        varChar Estado FK
    }

    Estado_Partida{
        varChar Estado PK
        varChar Descripcion
    }

    Fila{
        int Numero_fila PK
        varChar Detalles
    }

    Turno{
        int Numero_Turno PK
        varChar Detalles
        
    }

    TiradaxTurno{
        int Tirada FK, PK
        int Turno FK, PK
        Date FechaHora_Inicio
        Date FechaHora_Fin
    }

    Tirada{
        int Numero_tirada PK
        int Pinos_Derribados
    }

    

    Pista_Bowling{
        int Id_Pista PK
        int Capacidad_Maxima
        varChar Descripcion
        varChar Estado FK
    }

    Estado_Pista{
        varChar Estado PK
        varChar Descripcion

    }

    Pedido{
        int Id_Pedido PK
        int Id_Producto FK
        varChar Estado FK
        Date FechaHora_Pedido
    }

    

    Estado_Pedido{
        varChar Estado PK
        varChar Descripcion
    }

    

    

    Producto{
        varChar Nombre
        varChar Descripcion
        int Precio
        int Id_Producto PK
    }

    Historial_Estado{
        int Reserva FK, PK
        varChar Estado FK, PK
        Date FechaHora_Inicio
        Date FechaHora_Fin
    }




    Cliente||--|{Reserva : hace


    Reserva}|--||Historial_Estado : tiene
    Historial_Estado||--|{Estado_Reserva : tiene

    Reserva}|--||Pista_Bowling : en

    Reserva||--|{Partida : tiene

    Pista_Bowling||--|{Partida : "se juega"

    Pista_Bowling}|--||Estado_Pista : tiene

    

    Partida}|--||Estado_Partida : tiene

    Partida||--|{Fila : tiene

    Fila}|--||Turno : tiene

    Turno||--|{TiradaxTurno : " 2 por turno"

    TiradaxTurno}|--||Tirada : "2 x turno"

    PedidoxProducto}|--||Producto : tiene

   

    Partida||--|{Jugador : " la juegan"

    Jugador||--|{Fila : tiene

    Reserva||--|{Pedido : "se registra"

    

    

    Pedido}|--||Estado_Pedido : tiene

    Pedido||--|{PedidoxProducto : tiene